[gd_scene load_steps=4 format=3 uid="uid://b86j8ecal8mc5"]

[ext_resource type="Script" path="res://Scripts/Day1.gd" id="1_w4j0e"]
[ext_resource type="PackedScene" uid="uid://k7bk35app0ux" path="res://Assets/Star.glb" id="2_d25q3"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1y8do"]
height = 1.2331
radius = 0.984604

[node name="Day1" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01439, 0)
script = ExtResource("1_w4j0e")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.769858, -0.889166)
text = "Please wait..."

[node name="Test2" type="Area3D" parent="."]
transform = Transform3D(0.38473, 0, 0.923029, 0, 1, 0, -0.923029, 0, 0.38473, -4.81039, 0, 0.495688)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Test2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.69902, -0.515973, 0)
shape = SubResource("CylinderShape3D_1y8do")

[node name="Label3D2" type="Label3D" parent="Test2"]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, -1.72002, 0, 0)
modulate = Color(0.454902, 1, 0, 1)
text = "Test Input 1B"

[node name="Test" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.04765, 0, -0.0518165)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Test"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.69902, -0.515973, 0)
shape = SubResource("CylinderShape3D_1y8do")

[node name="Label3D2" type="Label3D" parent="Test"]
transform = Transform3D(0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, -1.72002, 0, 0)
modulate = Color(0.929412, 1, 0.101961, 1)
text = "Test Input 1"

[node name="Full" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.43182, 0, -0.0219693)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Full"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.71824, -0.515973, 0)
shape = SubResource("CylinderShape3D_1y8do")

[node name="Label3D3" type="Label3D" parent="Full"]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, -1.73524, 0, 0)
modulate = Color(1, 0.427451, 0, 1)
text = "Full Input 1"

[node name="Full2" type="Area3D" parent="."]
transform = Transform3D(0.510633, 0, -0.859799, 0, 1, 0, 0.859799, 0, 0.510633, 5.98858, -0.00417089, 4.32205)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Full2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.71824, -0.515973, 0)
shape = SubResource("CylinderShape3D_1y8do")

[node name="Label3D3" type="Label3D" parent="Full2"]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, -1.73524, 0, 2.38419e-07)
modulate = Color(1, 0.117647, 0.160784, 1)
text = "Full Input 1B"

[node name="Star2" parent="." instance=ExtResource("2_d25q3")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.159514, 1.27912, 0.348032)

[node name="Star" parent="." instance=ExtResource("2_d25q3")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.42039, 0.852744, -0.209462)

[connection signal="body_entered" from="Test2" to="." method="_on_test_2_body_entered"]
[connection signal="body_entered" from="Test" to="." method="_on_test_body_entered"]
[connection signal="body_entered" from="Full" to="." method="_on_full_body_entered"]
[connection signal="body_entered" from="Full2" to="." method="_on_full_2_body_entered"]
